# Vita2Arm64-VArm-

./: CMakeLists.txt
include/: hle_kernel.h  hle_module.h  varm_bridge.h  varm_cheats.h  varm_cpu.h  varm_elf.h  varm_graphics.h  varm_gxm_backend.h  varm_input.h  varm_menu.h  varm_nids.h  varm_system.h
src/: hle_kernel.c  hle_module.c  main.c  varm-dump.c  varm_cheats.c  varm_elf.h  varm_graphics.c  varm_gxm_backend.c  varm_input.c  varm_input.h  varm_menu.c  varm_system.c
tools/: gen_nids.py
varm-gxm/include/: varm_gxm_backend.h
varm-gxm/src/hle/: gxm.c
